# trm

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml
.clangd/index/: FILE.h.0B47AA35880D6C68.idx  __locale_t.h.3F73A78C1398A1A9.idx  __sigset_t.h.6BFEE909145251C5.idx  __stddef_max_align_t.h.81421FD8478D3F1E.idx  _fixes.hpp.9E70A26ED7D61D33.idx  _fixes.hpp.D3C259088BC14316.idx  _fixes.hpp.FF0C6587C15A58A5.idx  _swizzle_func.hpp.74425F3649AF910C.idx  _swizzle_func.hpp.79CD62F7EAFB81DE.idx  _swizzle_func.hpp.A405A4862BD14F05.idx  _vectorize.hpp.5685103788F0948A.idx  _vectorize.hpp.A6107C419F3EF4ED.idx  _vectorize.hpp.F8E9ED2F38B8BF26.idx  algorithmfwd.h.6679E05849D5F54B.idx  algorithmfwd.h.A3875BC5DC4FC0C8.idx  aligned_buffer.h.54B510892B87C25E.idx  alloc_traits.h.0E1DC2B1B26589EA.idx  alloc_traits.h.185D1CD5B7463772.idx  alloc_traits.h.1E77E30CE77E9D64.idx  alloc_traits.h.2F89D42568C5A303.idx  alloca.h.B3C3404035C15EA6.idx  allocated_ptr.h.30133D864C2E8DF6.idx  allocated_ptr.h.7E5E6A3C862A835E.idx  allocator.h.26EAA5320DABF70A.idx  allocator.h.E8EEA51D4415153A.idx  array.0404C0B588B7DAB6.idx  array.D300F9F48C4F8264.idx  assert.h.F44EF353D67C7E11.idx  assertions.h.0157C1E6858CB8AC.idx  atomic_base.h.43194A004E063A0A.idx  atomic_base.h.921C69C7E343B1BF.idx  atomic_word.h.BB026D9B196CE37D.idx  atomicity.h.8C92804D1740383C.idx  auto_ptr.h.098CF21651CDF6F6.idx  auto_ptr.h.CE7F3B0BCC63A7E3.idx  bar.cpp.1A18ACBC3017586B.idx  bar.cpp.282BC433AA2B591D.idx  bar.cpp.E134735A70F5937E.idx  bar.hpp.07AFFF1E165BBF92.idx  bar.hpp.A615CBB917DABB54.idx  (+995 more)
.vim/: coc-settings.json
docs/: trm.aux  trm.fdb_latexmk  trm.fls  trm.tex
example/: 0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json  0010.json  0011.json  0012.json  0013.json  0014.json  0015.json  0016.json  0017.json  0018.json  0019.json  0020.json  0021.json  0022.json  0023.json  0024.json  0025.json  0026.json  0027.json  0028.json  0029.json  0030.json  0031.json  0032.json  0033.json  0034.json  0035.json  0036.json  0037.json  0038.json  0039.json  0040.json  (+17 more)
scripts/: box.json  showcase.py
src/: argparse.cpp  argparse.hpp  bar.cpp  bar.hpp  camera.hpp  img.cpp  img.hpp  interp.hpp  main.cpp  material.hpp  rand.hpp  scene.cpp  scene.hpp  sdf.cpp  sdf.hpp  settings.hpp  stb_image_write.h  type.hpp
